# sp500-stock-performance

./: .gitattributes  .replit  CALCULATION_WALKTHROUGH.md  FINAL_REPORT.md  FS1987_daily_entropy.csv  FS1987_entropy_profile.csv  FS1987_entropy_profile_CORRECTED.csv  FS1987_temporal_entropy.csv  FS2116_daily_entropy.csv  FS2116_entropy_profile.csv  FS2116_entropy_profile_CORRECTED.csv  FS2116_temporal_entropy.csv  FULL_DATA_EXPLANATION.py  Factor_Analysis_Disney_Presentation.pptx  Factor_Analysis_Financial_Performance_Presentation.pptx  Factor_Analysis_GSCM_Presentation.pptx  Factor_Analysis_JobSatisfaction_Presentation.pptx  Factor_Analysis_Presentation.pptx  Factor_Analysis_SocialMedia_Presentation.pptx  Factor_Analysis_Women_WorkEngagement_Presentation.pptx  Factor_Analysis_Work_Engagement_Enhanced.pptx  Final_Presentation_AutoPlay.pptx  Final_Presentation_Fixed.pptx  Final_Presentation_Projector.pptx  Final_Project_Report.aux  Final_Project_Report.out  Final_Project_Report.tex  Gidan_CreditRisk_Presentation.pptx  Gidan_LendingClub_CreditRisk_Paper.docx  Homework6_Davoudmanesh.aux  Homework6_Davoudmanesh.out  Homework6_Davoudmanesh.tex  MASST_Dataset.csv  MASST_Dataset.xlsx  MI Analysis.py  README.md  README.txt  RESEARCH_QUESTIONS_DETAILED.md  SP500_Outperformer_Prediction.pptx  SP500_Technical_Report_LanaGidan.docx  (+186 more)
.agents/: agent_assets_metadata.toml
attached_assets/: CCA_dataset_(1)_1776995444595.xlsx  Cisco_Webex_Case_Comp_By_Agentix_Consulting_1772854922433.pptx  Cisco_Webex_Case_Comp_By_Agentix_Consulting_1772856010304.pptx  Data_set-2_1778677563523.xlsx  (+26 more)
(+34 files in other folders)
