[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "fpdf2>=2.8.6",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "python-pptx>=1.0.2",
    "requests>=2.32.5",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
]
