[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "factor-analyzer>=0.5.1",
    "fpdf2>=2.8.6",
    "gurobipy>=13.0.1",
    "kagglehub>=1.0.0",
    "lxml>=6.0.2",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pulp>=3.3.0",
    "python-pptx>=1.0.2",
    "reportlab>=4.4.10",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
]
